# agsipls

./: .,  .gitignore  .goreleaser.yml  ARCHITECTURE.md  Cargo.toml  DOCKER.md  Dockerfile  FINAL_COMPLETE.md  GORELEASER_COMPLETE.txt  GORELEASER_MIGRATION.md  GORELEASER_WORKFLOW.md  LICENSE  PARAMETER_CODES_REFERENCE.md  QUICK_REFERENCE.md  TUI_CREATION_GUIDE.md  docker-compose.yml  install.sh  test.sh
.github/workflows/: ci.yml  goreleaser-test.yml  release.yml
crates/agsi/: Cargo.toml
crates/agsi-core/: Cargo.toml
crates/agsi-core/src/: agsi_model.rs  document.rs  error.rs  geometry.rs  lib.rs  material.rs  model.rs  project.rs  serialization.rs  validation.rs
crates/agsi-py/: Cargo.toml  README.md  pyproject.toml
crates/agsi-py/src/: lib.rs
crates/agsi/src/: main.rs
crates/agsi/src/commands/: convert.rs  create.rs  diff.rs  edit.rs  extract.rs  form.rs  info.rs  mod.rs  stats.rs  validate.rs
crates/agsi/src/lsp/: mod.rs
crates/agsi/src/mcp/: server.rs
crates/agsi/src/ui/: editor.rs  mod.rs
docs/: AGSI_IMPLEMENTATION_SUMMARY.md  AGSI_MODEL_STRUCTURES.md  CHANGELOG.md  COMPLETE_IMPLEMENTATION.md  CONTRIBUTING.md  DEMO.md  FINAL_STATUS.md  GORELEASER.md  GORELEASER_CHECKLIST.md  GORELEASER_QUICKREF.md  GORELEASER_README_ADDITION.md  GORELEASER_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  TODO.md  TUI_CREATION_UPDATE.md  UNIFIED_BINARY.md  UPDATE.md
examples/: 3d_model.rs  agsi_model_example.rs  create_model.rs
schemas/: agsi.avsc  agsi.proto
