[package]
name = "agsi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for AGSi ground model data structures"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
apache-avro = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
wkt = { workspace = true }
geozero = { workspace = true }
jsonschema = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = { workspace = true }

[[example]]
name = "create_model"
path = "../../examples/create_model.rs"

[[example]]
name = "3d_model"
path = "../../examples/3d_model.rs"

[[example]]
name = "agsi_model_example"
path = "../../examples/agsi_model_example.rs"
