[package]
name = "agsi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Complete AGSi toolkit - CLI, MCP server, and LSP server in one binary"

[[bin]]
name = "agsipls"
path = "src/main.rs"

[dependencies]
agsi-core = { path = "../agsi-core" }
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
inquire = { workspace = true }
dialoguer = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
whoami = "1.5"
